# Rust_New_FrameWork

./: README.md  create_frame.sh  create_frame_two.sh
documents/: Cargo.toml  Makefile  create_DB.rs  databases.json  index.html  index.rs  main.rs  new_get_page.sh  new_post_page.sh  routes.rs
web_app/: Cargo.toml  Makefile  new_get_page.sh  new_post_page.sh  package-lock.json  package.json
web_app/DB_Model/: create_DB.rs  databases.json
web_app/DB_Model/db/: sql.db
web_app/css/test_model/: style.css
web_app/css/view/: style.css
web_app/model/: create_DB.rs
web_app/model/db/: sql.db
web_app/src/: main.rs  routes.rs
web_app/src/controllers/: index.rs  login.rs  mod.rs  post_file.rs
web_app/src/test/: anarisis_code_to_json.rs  test.rs
web_app/src/test/data_json/: input_file.json  model_file.json
web_app/static/test_model/: test_model.js
web_app/templates/: login.html
web_app/templates/model/: model.html
web_app/templates/view/: login.html  post_file.html
web_app/test_model/: anarisis_code_to_json.rs  test.rs  test_model.rs
web_app/test_model/data_json/: model_file.json
web_app/test_model/data_txt/: controller_name.txt
